--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -44,19 +44,19 @@
         <section id="headerType" class="header__wrap nexon scroll">
             <div class="header__inner">
                 <div class="header__logo">
-                    <a href="#">web<em>site</em></a>
+                    <a href="#">Pottery<em></em></a>
                 </div>
                 <div class="header__menu">
                     <ul>
-                        <li class="active"><a href="#headerType">헤더 영역</a></li>
-                        <li><a href="#sliderType">슬라이드 영역</a></li>
-                        <li><a href="#bannerType">배너 영역</a></li>
-                        <li><a href="#imgTextType">컨테이너 영역</a></li>
-                        <li><a href="#footerType">푸터 영역</a></li>
+                        <li class="active"><a href="#headerType">Header</a></li>
+                        <li><a href="#sliderType">22AW Lookbook</a></li>
+                        <li><a href="#imgTextType">NEW ARRIVALS</a></li>
+                        <li><a href="#cardType">HQ Service</a></li>
+                        <li><a href="#bannerType">Pottery</a></li>
                     </ul>
                 </div>
                 <div class="header__member">
-                    <a href="#">로그인</a>
+                    <a href="#">Login</a>
                 </div>
             </div>
         </section>
@@ -68,15 +68,14 @@
                 <div class="slider">
                     <div class="slider__img">
                         <div class="desc">
-                            <span>DEVELOPER</span>
-                            <h3>NEW PROJECT</h3>
+                            <span>Brand</span>
+                            <h3>22AW Lookbook</h3>
                             <p>
-                                너무 무리하지 말아요! 이미 당신은 잘하고 있고!<br>
-                                앞으로도 잘 할 수 있어요!
+                                포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다.
                             </p>
                             <div class="btn">
-                                <a href="#">자세히 보기</a>
-                                <a href="#" class="black">사이트 보기</a>
+                                <a href="#">Read more</a>
+                                <a href="#" class="black">Site</a>
                             </div>
                         </div>
                     </div>
@@ -98,63 +97,68 @@
 
         <section id="imageType" class="image__wrap nexon section content">
             <h2>POTTERY</h2>
-            <p>‘POTTERY’, 포터리라는 이름은 도자기를 의미합니다.</p>
+            <p>포터리는 좋은 옷을 통해 삶을 더 좋게 빚어 나갑니다.</p>
             <div class="image__inner container">
                 <article class="image img1">
-                    <h3 class="image__title">POTTERY</h3>
-                    <p class="image__desc"> 시간에도 도자기는 그 본질이 변하지 않습니다. 우리는 도자기처럼 본질을 지키면서 시간에 따라 변하는 개개인의 삶에 집중하여 옷을 만듭니다.</p>
-                    <a class="image__btn" href="/" title="자세히 보기">자세히 보기</a>
+                    <h3 class="image__title">우리의 목적</h3>
+                    <p class="image__desc">포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이었다면, 현대의 유니폼은 개개인의 라이프스타일 또한 대변할 수 있는 옷이 되었습니다.</p>
+                    <a class="image__btn" href="/" title="자세히 보기">Read more</a>
                 </article>
                 <article class="image img2">
-                    <h3 class="image__title">POTTERY</h3>
-                    <p class="image__desc"> 시간에도 도자기는 그 본질이 변하지 않습니다. 우리는 도자기처럼 본질을 지키면서 시간에 따라 변하는 개개인의 삶에 집중하여 옷을 만듭니다.</p>
-                    <a class="image__btn yellow" href="/" title="자세히 보기">자세히 보기</a>
+                    <h3 class="image__title">우리의 미션</h3>
+                    <p class="image__desc">
+                        (1) COMPANY<br>
+                        포터리는 다양한 직군을 관찰하고 그들의 문화와 환경에 맞는 소속감과 통일성이 있는 유니폼을 제공하는 서비스를 진행합니다.
+                    </p>
+                    <a class="image__btn yellow" href="/" title="자세히 보기">Read more</a>
                 </article>
             </div>
         </section>
         <!-- //image -->
 
         <section id="imgTextType" class="imgText__wrap nexon section content">
-            <h2 class="blind">유용한 사이트 살펴보기</h2>
+            <h2 class="blind">NEW ARRIVALS</h2>
             <div class="imgText__inner container">
                 <div class="imgText__txt">
-                    <span>이미지 텍스트 유형 01</span>
-                    <h3>유용한 사이트 살펴보기</h3>
-                    <p>웹디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 유용한 사이트입니다.</p>
+                    <span>NEW ARRIVALS</span>
+                    <h3>NEW ARRIVALS</h3>
+                    <p>새로움의 시작</p>
                     <ul>
-                        <li><a href="#">튜토리얼 사이트</a></li>
-                        <li><a href="#">레퍼런스 사이트</a></li>
-                        <li><a href="#">웹폰트 사이트</a></li>
-                        <li><a href="#">CSS 사이트</a></li>
-                        <li><a href="#">WebGL 사이트</a></li>
-                        <li><a href="#">Youtube 사이트</a></li>
+                        <li><a href="#">All</a></li>
+                        <li><a href="#">Shirt</a></li>
+                        <li><a href="#">Knit</a></li>
+                        <li><a href="#">T-Shirt</a></li>
+                        <li><a href="#">Jacket</a></li>
+                        <li><a href="#">Pants</a></li>
                     </ul>
                 </div>
-                <div class="imgText__img img1">
-                    <a href="#">레퍼런스 사이트</a>
-                </div>
-                <div class="imgText__img img2">
-                    <a href="#" class="blue">튜토리얼 사이트</a>
+                <div class="imgText__all">
+                    <div class="imgText__img img1">
+                        <a href="#">NEW ARRIVALS</a>
+                    </div>
+                    <div class="imgText__img img2">
+                        <a href="#" class="blue">BEST</a>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- //imgText -->
 
         <section id="cardType" class="card__wrap nexon section content">
-            <h2>POTTERY</h2>
-            <p>‘POTTERY’, 포터리라는 이름은 도자기를 의미합니다.</p>
+            <h2>HQ Service</h2>
+            <p>Headquarter, Center of POTTERY</p>
             <div class="card__inner container">
                 <article class="card">
                     <figure class="card__header">
                         <img src="assets/img/card_bg01_01.jpg" alt="포터리">
                     </figure>
                     <div class="card__body">
-                        <h3 class="tit">포터리</h3>
+                        <h3 class="tit">COMPANY</h3>
                         <p class="desc">
-                            포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
+                            포터리는 다양한 직군을 관찰하고 그들의 문화와 환경에 맞는 소속감과 통일성이 있는 유니폼을 제공하는 서비스를 진행합니다.
                         </p>
                         <a class="btn" href="/">
-                            더 자세히 보기
+                            Read more
                             <span aria-hidden="true">
                                 <svg width="66" height="8" viewBox="0 0 66 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 3.5C0.723858 3.5 0.5 3.72386 0.5 4C0.5 4.27614 0.723858 4.5 1 4.5L1 3.5ZM65.3536 4.35356C65.5488 4.1583 65.5488 3.84171 65.3536 3.64645L62.1716 0.464471C61.9763 0.269209 61.6597 0.269209 61.4645 0.464471C61.2692 0.659734 61.2692 0.976316 61.4645 1.17158L64.2929 4.00001L61.4645 6.82843C61.2692 7.02369 61.2692 7.34028 61.4645 7.53554C61.6597 7.7308 61.9763 7.7308 62.1716 7.53554L65.3536 4.35356ZM1 4.5L65 4.50001L65 3.50001L1 3.5L1 4.5Z" fill="black"/>
@@ -168,12 +172,13 @@
                         <img src="assets/img/card_bg01_02.jpg" alt="TPO">
                     </figure>
                     <div class="card__body">
-                        <h3 class="tit">TPO</h3>
+                        <h3 class="tit">HQ</h3>
                         <p class="desc">
-                            우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                            헤드 오피스는 포터리 고유의 문화를 지향하는 사람들의 모임입니다.
+                            창의적이고 생산적인 활동을 통해 영감을 주는 이들을 위해 한정적인 아이템 서비스를 진행합니다.
                         </p>
                         <a class="btn" href="/">
-                            더 자세히 보기
+                            Read more
                             <span aria-hidden="true">
                                 <svg width="66" height="8" viewBox="0 0 66 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 3.5C0.723858 3.5 0.5 3.72386 0.5 4C0.5 4.27614 0.723858 4.5 1 4.5L1 3.5ZM65.3536 4.35356C65.5488 4.1583 65.5488 3.84171 65.3536 3.64645L62.1716 0.464471C61.9763 0.269209 61.6597 0.269209 61.4645 0.464471C61.2692 0.659734 61.2692 0.976316 61.4645 1.17158L64.2929 4.00001L61.4645 6.82843C61.2692 7.02369 61.2692 7.34028 61.4645 7.53554C61.6597 7.7308 61.9763 7.7308 62.1716 7.53554L65.3536 4.35356ZM1 4.5L65 4.50001L65 3.50001L1 3.5L1 4.5Z" fill="black"/>
@@ -187,12 +192,13 @@
                         <img src="assets/img/card_bg01_03.jpg" alt="원단">
                     </figure>
                     <div class="card__body">
-                        <h3 class="tit">원단</h3>
+                        <h3 class="tit">SHARE OFFICE</h3>
                         <p class="desc">
-                            유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                            오피스 문화의 개선을 주도하는 포터리의 공유 오피스 프로그램입니다.
+                            창의적이고 생산적인 활동을 주도하는 이들의 커뮤니케이션과, 작업 환경의 주요 공간으로 활용됩니다.
                         </p>
                         <a class="btn" href="/">
-                            더 자세히 보기
+                            Read more
                             <span aria-hidden="true">
                                 <svg width="66" height="8" viewBox="0 0 66 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1 3.5C0.723858 3.5 0.5 3.72386 0.5 4C0.5 4.27614 0.723858 4.5 1 4.5L1 3.5ZM65.3536 4.35356C65.5488 4.1583 65.5488 3.84171 65.3536 3.64645L62.1716 0.464471C61.9763 0.269209 61.6597 0.269209 61.4645 0.464471C61.2692 0.659734 61.2692 0.976316 61.4645 1.17158L64.2929 4.00001L61.4645 6.82843C61.2692 7.02369 61.2692 7.34028 61.4645 7.53554C61.6597 7.7308 61.9763 7.7308 62.1716 7.53554L65.3536 4.35356ZM1 4.5L65 4.50001L65 3.50001L1 3.5L1 4.5Z" fill="black"/>
@@ -213,44 +219,44 @@
                     저희는 비즈니스 캐주얼을 지향하고 있으며,<br>
                     언제 어디서든 편안한 룩을 지향합니다.
                 </p>
-                <span class="small">배너 유형 01</span>
+                <span class="small">Read more</span>
             </div>
         </section>
         <!-- //banner -->
 
         <section id="textType" class="text__warp nexon section content">
-            <span>텍스트 유형 01</span>
+            <span></span>
             <h2 class="mb70">POTTERY</h2>
             <div class="text__inner container">
                 <div class="text t1">
-                    <h3 class="text__title">포터리</h3>
-                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
-                    <a class="text__btn" href="/">더보기</a>
+                    <h3 class="text__title">"섬세한"</h3>
+                    <p class="text__desc">옷의 쓰임새에 알맞게 제작된 제품들은 높은 신뢰성과 내구성을 보입니다. 옷을 입는 상황에서의 편리함, 그리고 옷을 입지 않았을 때의 외양, 소재의 성능 등 세부적인 제작 요소들을 제어하고 제품의 완결성을 높입니다.</p>
+                    <a class="text__btn" href="/">Read more</a>
                 </div>
                 <div class="text t2">
-                    <h3 class="text__title">TPO</h3>
-                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
-                    <a class="text__btn" href="/">더보기</a>
+                    <h3 class="text__title">"드러내지 않는"</h3>
+                    <p class="text__desc">우리의 제품과 브랜드는 고객에게 본질의 형태로 자연스럽게 인식되는 것을 목표로 합니다. 외양에서 드러나는 표식과 불필요한 디테일들을 제거하고, 오랫동안 호흡하며 알 수 있는 옷의 힘에 집중합니다. 드러내지 않는 디테일과 브랜드 라벨링은 옷이 보여줄 수 있는 힘을 더 강조합니다.</p>
+                    <a class="text__btn" href="/">Read more</a>
                 </div>
                 <div class="text t3">
-                    <h3 class="text__title">원단</h3>
-                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
-                    <a class="text__btn" href="/">더보기</a>
+                    <h3 class="text__title">"기준이 되는"</h3>
+                    <p class="text__desc">우리의 제품은 현대 사회의 표준이 될 수 있는 유니폼의 시작으로부터 만들어집니다. 모호함과 복잡함의 연속이 되는 시대에, 하나의 완성도 높은 제품을 선보임으로써 기준이 되고자 합니다. 간결함을 바탕으로, 우리가 추구하는 ‘기준이 되는 옷’을 만드는 데는 퀄리티 높은 소재와 철저한 공정이 개입됩니다.</p>
+                    <a class="text__btn" href="/">Read more</a>
                 </div>
                 <div class="text t4">
-                    <h3 class="text__title">Brand</h3>
-                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
-                    <a class="text__btn" href="/">더보기</a>
+                    <h3 class="text__title">"정돈된 편안함"</h3>
+                    <p class="text__desc">우리는 일련의 과정을 통해, 포터리가 생각하는 정돈된 실루엣의 완성을 목표로 합니다. 의류의 가장 기초가 되는 ‘소재’를 바탕으로 하여, 우리가 추구하는 정돈된 실루엣의 형태로 옷을 완성합니다. 정돈된 것들은 우리에게 편안함을 줍니다.</p>
+                    <a class="text__btn" href="/">Read more</a>
                 </div>
                 <div class="text t5">
-                    <h3 class="text__title">ADVOCACY</h3>
-                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
-                    <a class="text__btn" href="/">더보기</a>
+                    <h3 class="text__title">"절제된 위트"</h3>
+                    <p class="text__desc">우리는 포터리만의 ‘해학’을 가지고, 절제된 언어로 말을 건넵니다. 문장의 말미에 걸쳐 있는 재미의 반전 요소처럼, 브랜드 곳곳에 담겨 있는 재치 있는 디테일들은 포터리가 추구하는 절제된 위트를 규정합니다. 포터리가 만들어낸 옷들의 반듯하고 절제된 이미지 속에서, 우리는 각각의 요소와 소재를 비틀어 개개인에게 여유와 재미를 전달합니다.</p>
+                    <a class="text__btn" href="/">Read more</a>
                 </div>
                 <div class="text t6">
-                    <h3 class="text__title">Our Progress</h3>
-                    <p class="text__desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다.</p>
-                    <a class="text__btn" href="/">더보기</a>
+                    <h3 class="text__title">"엄격한 기준"</h3>
+                    <p class="text__desc">우리에게 옷은 경험하지 못한 이상적인 세계를 엮어주는 하나의 통로입니다. 최상의 경험을 위해서는 기존에 겪지 못했던 최상의 소재를 선별해내야 합니다. 그리고 엄격한 감독을 통해 만들어내는 과정에 밀착하여 완결성을 높여야 합니다. 포터리의 옷들이 만들어지는 과정부터 고객에게 전달되는 그 순간까지, 우리는 이를 하나의 긴 여정으로 보고, 엄격한 기준으로 접근합니다.</p>
+                    <a class="text__btn" href="/">Read more</a>
                 </div>
             </div>
         </section>
@@ -261,53 +267,53 @@
             <div class="footer__inner container">
                 <div class="footer__menu">
                     <div>
-                        <h3>사이트</h3>
-                        <ul>
+                        <h3>POTTERY</h3>
+                        <!-- <ul>
                             <li><a href="#">웹표준 사이트</a></li>
                             <li><a href="#">반응형 사이트</a></li>
                             <li><a href="#">패럴랙스 사이트</a></li>
                             <li><a href="#">포트폴리오 사이트</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div>
-                        <h3>헤더 영역</h3>
-                        <ul>
+                        <h3>Header</h3>
+                        <!-- <ul>
                             <li><a href="#">메뉴 유형01</a></li>
                             <li><a href="#">메뉴 유형02</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div>
-                        <h3>슬라이드 영역</h3>
-                        <ul>
+                        <h3>22AW Lookbook</h3>
+                        <!-- <ul>
                             <li><a href="#">슬라이드 유형01</a></li>
                             <li><a href="#">슬라이드 유형02</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div>
-                        <h3>이미지 영역</h3>
-                        <ul>
+                        <h3>NEW ARRIVALS</h3>
+                        <!-- <ul>
                             <li><a href="#">이미지 유형01</a></li>
                             <li><a href="#">이미지 유형02</a></li>
                             <li><a href="#">이미지/텍스트 유형01</a></li>
                             <li><a href="#">이미지/텍스트 유형02</a></li>
                             <li><a href="#">텍스트 유형01</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div>
-                        <h3>컨텐츠 영역</h3>
-                        <ul>
+                        <h3>HQ Service</h3>
+                        <!-- <ul>
                             <li><a href="#">카드 유형01</a></li>
                             <li><a href="#">카드 유형02</a></li>
                             <li><a href="#">카드 유형03</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div>
-                        <h3>푸터 영역</h3>
-                        <ul>
+                        <h3>Pottery</h3>
+                        <!-- <ul>
                             <li><a href="#">푸터 메뉴 유형01</a></li>
                             <li><a href="#">푸터 컨택트 유형02</a></li>
                             <li><a href="#">푸터 이메일 유형03</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="footer__right">
@@ -323,7 +329,7 @@
 
     <script>
         window.addEventListener("scroll", () => {
-            let scrollTop = window.pageYOffset || indow.scrollY || document.documentElement.scrollTop;
+            let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
 
             // forEach
             document.querySelectorAll("section").forEach((element, index) => {
