--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="assets/css/common.css">
 
     <!-- CSS(섹션별) -->
-    <link rel="stylesheet" href="assets/css/card.css">
-    <link rel="stylesheet" href="assets/css/image.css">
-    <link rel="stylesheet" href="assets/css/text.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/slider.css">
+    <link rel="stylesheet" href="assets/css/image.css">
     <link rel="stylesheet" href="assets/css/imgText.css">
+    <link rel="stylesheet" href="assets/css/card.css">
     <link rel="stylesheet" href="assets/css/banner.css">
+    <link rel="stylesheet" href="assets/css/text.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 <body>
@@ -107,7 +107,7 @@
                 <article class="image img2">
                     <h3 class="image__title">우리의 미션</h3>
                     <p class="image__desc">
-                        (1) COMPANY<br>
+                        COMPANY<br>
                         포터리는 다양한 직군을 관찰하고 그들의 문화와 환경에 맞는 소속감과 통일성이 있는 유니폼을 제공하는 서비스를 진행합니다.
                     </p>
                     <a class="image__btn yellow" href="/" title="자세히 보기">Read more</a>
